Revert "test: podman image"
This reverts commit 804c6ec6459d3649c0d37ef1a8c4f8a901e348f7.

revert commit

--- a/.coder/coder.yaml
+++ b/.coder/coder.yaml
@@ -4,7 +4,7 @@ workspace:
   specs:
     kubernetes:
       image:
-        value: index.docker.io/ericpaulsen/podman:v3
+        value: index.docker.io/ericpaulsen/podman:ubuntu
       container-based-vm:
         value: false
       cpu:
